# weibo_snowball

./: LICENSE  README.md  cookie.txt  duplicate.py  js.json  main.py  minor_scrape.py  pipelines.py  pyproject.toml  requirements.txt  settings.py  weibo_escraper.py
log/: all.log.2024-11-30  all.log.2025-01-04
spiders/: fan.py  follower.py  tweet_by_keyword.py  tweet_by_user_id.py
step2_crawler/: config.json  screen_names_1.txt  screen_names_2.txt  weibo.py
weibo - Codes/: User.xlsx  js.json  main.py  ~$User.xlsx
weibo - Codes/step2_crawler/: config.json  js.json  weibo.py
