[project]
name = "lgbt-network-copy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "lxml==5.3.0",
    "openai>=1.59.8",
    "path>=17.0.0",
    "pymongo==4.6.3",
    "pymysql==1.1.1",
    "python-dateutil>=2.9.0.post0",
    "requests==2.32.0",
    "schedule==1.2.1",
    "scraper>=0.1.0",
    "scrapy==2.10.1",
    "tqdm==4.66.3",
    "weibo-scraper>=1.0.6",
]
